Landing page done

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -5,3 +5,25 @@
 #nav-top ul {
   list-style-type: none;
 }
+
+#menubar {
+  position: relative;
+}
+
+.mainBox {
+    border: solid thin black;
+}
+
+
+#title {
+  font-size:3em;
+  font-weight: bolder;
+}
+
+#myaccount {
+  font-weight: bolder;
+}
+
+.padding2em {
+  padding-top:2em;
+}
