--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,29 +9,79 @@
 	</head>
 	<body>
 		<div class="container-fluid">
-			<header>
-				<nav id="nav-top">
-					<ul>
-						<li><img src="/assets/unlock_violet.png"/></li>
-						<li style="text-align: right">Login</li>
-						<li style="text-align: right">
-							<div class="dropdown">
-  								<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-    								English
-    								<span class="caret"></span>
-  								</button>
-								  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-								    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Spainsh</a></li>
-								    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Russian</a></li>
-								    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">French</a></li>
-								    <li role="presentation" class="divider"></li>
-								    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
-								  </ul>
-							</div>
-						</li>
-					</ul>
+			<!-- <header>
+				<nav class="navbar navbar-default" role="navigation">
+					<div class="navbar-header">
+						<a href="#"><img id="logo" src="/assets/unlock_violet_logo1.jpg"/></a><span id="title">Unlock</span>
+					</div>
+	 				<ul class="nav navbar-nav navbar-right">
+			        <li><a href="#">Link</a></li>
+			        <li class="dropdown">
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+			          <ul class="dropdown-menu" role="menu">
+			            <li><a href="#">Action</a></li>
+			            <li><a href="#">Another action</a></li>
+			            <li><a href="#">Something else here</a></li>
+			            <li class="divider"></li>
+			            <li><a href="#">Separated link</a></li>
+			          </ul>
+			        </li>
+			      </ul>					
 				</nav>
+			
+			</header> -->
+			<header>
+				<div class="row">
+					<div class="col-sm-2 col-md-2">
+						<a href="#"><img id="logo" src="/assets/unlock_violet_logo1.jpg"/></a><span id="title">Unlock</span>  
+					</div>
+					<div class="col-sm-10 col-md-10">
+						<div id="menubar" class="row">
+							<div class="col-sm-offset-10 col-md-offset-10 col-sm-1 col-md-1">
+								<a id="myaccount" href="#">My account</a>
+							</div>
+							<div  class="col-sm-1 col-md-1">
+								<div class="dropdown">
+									<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+										English
+										<span class="caret"></span>
+									</button>
+									  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+									    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Spainsh</a></li>
+									    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Russian</a></li>
+									    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">French</a></li>
+									  </ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</header>
+			<div class="row">
+				<div class="col-md-8 col-md-offset-3">
+					<h1>Would you like to unlock your phone?</h1>
+				</div>
+			</div>		
+			<div class="row padding2em">
+				<div class="col-md-3 col-md-offset-4">
+					<div class="input-group input-group-lg">
+					  <span class="input-group-addon">IMEI</span>
+					  <input type="text" class="form-control" placeholder="Enter your IMEI">
+					</div>
+				</div>
+			</div>		
+			<div class="row padding2em">
+				<div class="col-md-3 col-md-offset-4">
+					<div class="input-group input-group-lg">
+					  <video width="500" height="250" controls>
+						  <source src="assets/videos/unlock.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video>
+					</div>
+				</div>
+			</div>					
+	
 		</div>
+		
 	</body>
 </html>
