--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,28 +58,28 @@
 				</div>
 			</header>
 			<div class="row">
-				<div class="col-md-8 col-md-offset-3">
+				<div class="col-md-9 col-md-offset-3">
 					<h1>Would you like to unlock your phone?</h1>
 				</div>
 			</div>		
 			<div class="row padding2em">
 				<div class="col-md-3 col-md-offset-4">
+					<div class="input-group input-group-lg" onmouseout="doPlayPause()">
+					  <video id="idAdvt" width="530" height="300" controls>
+						  <source src="assets/Benefits.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video>
+					</div>
+				</div>
+			</div>					
+			<div class="row padding2em">
+				<div class="col-md-4 col-md-offset-4">
 					<div class="input-group input-group-lg">
 					  <span class="input-group-addon">IMEI</span>
 					  <input type="text" class="form-control" placeholder="Enter your IMEI">
 					</div>
 				</div>
 			</div>		
-			<div class="row padding2em">
-				<div class="col-md-3 col-md-offset-4">
-					<div class="input-group input-group-lg">
-					  <video width="500" height="250" controls>
-						  <source src="assets/videos/unlock.mp4" type="video/mp4">
-							Your browser does not support the video tag.
-						</video>
-					</div>
-				</div>
-			</div>					
 	
 		</div>
 		
