--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,8 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require bootstrap.min.css
+ *= require bootstrap.min
+ *= require bootstrapValidator.min
  *= require_tree .
  *= require_self
  */
