--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -9,8 +9,8 @@ header{
   //border: 1px solid red; 
   background-color: #E8CCE6;
 }
-
-
+#logo{height: 100px; width: 100px;}
+#logo{height:100px; width: 300px;}
 #nav-top {
 //border: 1px solid green;  
 margin-top: 10px;
