--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,60 +1,71 @@
-<%= form_for(@customer) do |p| %>
-	<div class="row padding7em">
-		<div class="col-md-offset-2 col-lg-offset-2 col-md-4 col-lg-4">
-		<p class="unlockHeader">New User Registration</p>
+<div class="row padding7em">
+	<div class="col-md-offset-1 col-lg-offset-1 col-md-4 col-lg-4">
+	<p class="unlockHeader">New User Registration</p>
+	</div>
+	<div class="col-md-offset-2 col-lg-offset-2 col-md-4 col-lg-4">
+	<p class="unlockHeader">Sign In Existing User</p>
+	</div>
+</div>
+<div class="row padding1em">	
+	<!-- first column -->
+	<%= form_for(@customer) do |p| %>
+	<div class="col-md-6 col-lg-6">
+		<div class="row padding1em">	
+			<div class="col-md-offset-2 col-lg-offset-2 col-md-8 col-lg-8">
+				<%= p.text_field :email, :placeholder=>'Email',:title=>'Email should not be blank',:tabindex=>"1", :required=> true, :autofocus=>true, :class=>'form-control input-lg' %>
+			</div>	
+		</div>			
+		<div class="row padding1em">
+			<div class="col-md-offset-2 col-lg-offset-2 col-md-8 col-lg-8">
+				<%= p.text_field :FirstName, :placeholder=>'First Name', :title=>'Title name should not be blank',:tabindex=>"2", :required=> true, :autofocus=>true, :class=>'form-control input-lg' %>
+			</div>
+		</div>		
+		<div class="row padding1em">
+			<div class="col-md-offset-2 col-lg-offset-2 col-md-8 col-lg-8">
+				<%= p.text_field :LastName, :placeholder=>'Last Name', :required=> true, :autofocus=>true,:tabindex=>"3", :class=>'form-control input-lg' %>
+			</div>
+		</div>		
+		<div class="row padding1em">
+			<div class="col-md-offset-2 col-lg-offset-2 col-md-8 col-lg-8">
+				<%= collection_select("customer","Country_id",@countries,:id,:name,{ :prompt=>'Select Country'},{:class=>"form-control input-lg",:tabindex=>"4",:required=>true})%>
+			</div>
 		</div>
-		<div class="col-md-offset-1 col-lg-offset-1 col-md-4 col-lg-4">
-		<p class="unlockHeader">Sign In Existing User</p>
+		<div class="row padding1em">
+			<div class="col-md-offset-2 col-lg-offset-2 col-md-8 col-lg-8">
+				<input class="form-control input-lg" name="txtPassword" type="password" tabindex="4" required="required"  placeholder="Password">
+			</div>
+		</div>	
+		<div class="row padding1em">
+			<div class="col-md-offset-2 col-lg-offset-2 col-md-8 col-lg-8">
+				<input class="form-control input-lg" name="txtConfirmPassword" type="password" tabindex="5" required="required"  placeholder="Confirm Password">
+				<%= p.hidden_field :imei,:value => @imei%>
+			</div>
+		</div>	
+		<div class="row padding1em">
+			<div class="col-md-offset-7 col-lg-offset-7 col-md-3 col-lg-3">
+				<button type="submit" name="butSignUp" tabindex="6" class="form-control btn btn-primary input-lg">Sign Up</button>
+			</div>
+		</div>	
+	</div>
+	<% end %>
+	<!-- second column -->
+	<div class="col-md-6 col-lg-6">
+		<div class="row padding1em">
+			<div class="col-md-offset-2 col-lg-offset-2 col-md-8 col-lg-8">
+				<input class="form-control input-lg" name="UserName" tabindex="7" type="text" required="required"  placeholder="User Name">
+			</div>	
+		</div>	
+		<div class="row padding1em">
+			<div class="col-md-offset-2 col-lg-offset-2 col-md-8 col-lg-8">
+				<input class="form-control input-lg" name="Password" type="password" tabindex="8" required="required"  placeholder="Password">
+			</div>
+		</div>	
+		<div class="row padding1em">
+			<div class="col-md-offset-7 col-lg-offset-7 col-md-3 col-lg-3">
+				<button type="submit" name="butSignin" tabindex="8" class="form-control btn btn-primary input-lg">Sign In</button>
+			</div>
 		</div>
 	</div>
-	<div class="row padding1em">	
-		<div class="col-md-offset-2 col-lg-offset-2 col-md-3 col-lg-3">
-			<%= p.text_field :email, :placeholder=>'Email',:title=>'Email should not be blank',:tabindex=>"1", :required=> true, :autofocus=>true, :class=>'form-control input-lg' %>
-			<!-- <input class="form-control input-lg col-md-6 col-lg-6" name="txtEmail" type="text" required="required"  placeholder="Email"> -->
-		</div>
-		<div class="col-md-offset-2 col-lg-offset-2 col-md-3 col-lg-3">
-			<input class="form-control input-lg" name="UserName" tabindex="7" type="text" required="required"  placeholder="User Name">
-		</div>
 
-	</div>		
-	<div class="row padding1em">
-		<div class="col-md-offset-2 col-lg-offset-2 col-md-3 col-lg-3">
-			<%= p.text_field :FirstName, :placeholder=>'First Name', :title=>'Title name should not be blank',:tabindex=>"2", :required=> true, :autofocus=>true, :class=>'form-control input-lg' %>
-		</div>
-		<div class="col-md-offset-2 col-lg-offset-2 col-md-3 col-lg-3">
-			<input class="form-control input-lg" name="Password" type="password" tabindex="8" required="required"  placeholder="Password">
-		</div>
-	</div>	
-	<div class="row padding1em">
-		<div class="col-md-offset-2 col-lg-offset-2 col-md-3 col-lg-3">
-			<%= p.text_field :LastName, :placeholder=>'Last Name', :required=> true, :autofocus=>true,:tabindex=>"3", :class=>'form-control input-lg' %>
-			<!-- <input class="form-control input-lg" name="txtLastName" type="text" required="required" placeholder="Last Name"> -->
-		</div>
-		<div class="col-md-offset-4 col-lg-offset-4 col-md-1 col-lg-1">
-			<button type="submit" name="butSignin" tabindex="8" class="form-control btn btn-primary input-lg">Sign In</button>
-		</div>
-
-	</div>	
-	<div class="row padding1em">
-		<div class="col-md-offset-2 col-lg-offset-2 col-md-3 col-lg-3">
-   			<%= collection_select("country","country_id",@countries,:id,:name,{ :prompt=>'Select Country'},{:class=>"form-control input-lg",:tabindex=>"4",:required=>true})%>
-		</div>
-	</div>
-	<div class="row padding1em">
-		<div class="col-md-offset-2 col-lg-offset-2 col-md-3 col-lg-3">
-   			<input class="form-control input-lg" name="txtPassword" type="password" tabindex="4" required="required"  placeholder="Password">
-		</div>
-	</div>	
-	<div class="row padding1em">
-		<div class="col-md-offset-2 col-lg-offset-2 col-md-3 col-lg-3">
-   			<input class="form-control input-lg" name="txtConfirmPassword" type="password" tabindex="5" required="required"  placeholder="Confirm Password">
-		</div>
-	</div>	
-	
-	<div class="row padding1em">
-		<div class="col-md-offset-4 col-lg-offset-4 col-md-1 col-lg-1">
-			<button type="submit" name="butSignUp" tabindex="6" class="form-control btn btn-primary input-lg">Sign Up</button>
-		</div>
-	</div>
+</div>
 		
-<% end %>
