--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,3 +22,18 @@
 		</div>
 	</div>
 </div>
+
+<div class="row padding2em">
+	<div class="container">
+		  <div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img src="../assets/iphone6.png" width="100px" height="100px" alt="...">
+		      <div class="caption">
+		        <h5>Unlock by Make</h5>
+		        <p>...</p>
+		        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+		      </div>
+		    </div>
+		  </div>
+	</div>
+</div>
