--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
 	 </div>
 </div>		
 <div class="row padding2em">
-	<div class="col-md-offset-3 col-lg-offset-3 col-md-6 col-lg-6"">
+	<div class="col-md-offset-3 col-lg-offset-3 col-md-6 col-lg-6">
 		<div class="input-group input-group-lg" onmouseout="doPlayPause()">
 		  <video id="idAdvt" width="100%" height="100%" controls>
 			  <source src="../assets/Benefits.mp4" type="video/mp4">
@@ -22,18 +22,176 @@
 		</div>
 	</div>
 </div>
-
 <div class="row padding2em">
-	<div class="container">
-		  <div class="col-sm-6 col-md-4">
-		    <div class="thumbnail">
-		      <img src="../assets/iphone6.png" width="100px" height="100px" alt="...">
-		      <div class="caption">
-		        <h5>Unlock by Make</h5>
-		        <p>...</p>
-		        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-		      </div>
-		    </div>
-		  </div>
+	<div class="col-md-offset-2 col-lg-offset-2 col-md-8 col-lg-8"">
+		<div class="jumbotron">
+			<div class="row">
+				<!-- first column -->
+				
+				<div class="col-md-6 col-lg-6">
+					<h2>Search by Network</h2>
+					<div class="row padding1em">	
+						<div class="col-md-3 col-lg-3">
+							<label class="form-control">Country:</label>
+						</div>
+						<div class="col-md-7 col-lg-7">
+							<select class="form-control input-md">
+							  <option value="-1">Select country</option>
+							  <option value="ca">Canada</option>
+							  <option value="us">USA</option>
+							  <option value="ru">Russia</option>
+							</select>
+						</div>
+					</div>
+					<div class="row padding1em">	
+						<div class="col-md-3 col-lg-3">
+							<label class="form-control">Network:</label>
+						</div>
+						<div class="col-md-7 col-lg-7">
+							<select class="form-control input-md">
+							  <option value="-1">Select network</option>
+							  <option value="ca">Rogers</option>
+							  <option value="us">Bell</option>
+							  <option value="ru">Telus</option>
+							</select>
+						</div>
+					</div>
+					<div class="row padding1em">	
+						<div class="col-md-3 col-lg-3">
+							<label class="form-control">Make:</label>
+						</div>
+						<div class="col-md-7 col-lg-7">
+							<select class="form-control input-md">
+							  <option value="-1">Select make</option>
+							  <option value="ca">iPhone</option>
+							  <option value="us">Samsong</option>
+							  <option value="ru">Black Berrry</option>
+							  <option value="ru">Nokia</option>
+							</select>
+						</div>
+					</div>
+					<div class="row padding1em">	
+						<div class="col-md-3 col-lg-3">
+							<label class="form-control">Model:</label>
+						</div>
+						<div class="col-md-7 col-lg-7">
+							<select class="form-control input-md">
+							  <option value="-1">Select model</option>
+							  <option value="ca">3G</option>
+							  <option value="us">3GS</option>
+							  <option value="ru">4G</option>
+							  <option value="ru">5C</option>
+							</select>
+						</div>
+					</div>
+				</div>
+				<!-- Second Column-->
+				<div class="col-md-6 col-lg-6">
+					<h2>Search by Make</h2>
+					<div class="row padding1em">	
+						<div class="col-md-offset-2 col-lg-offset-2 col-md-8 col-lg-8">
+							<div class="row padding1em">
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Alcatel</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Apple</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Blackberry</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Ericsson</a>
+								</div>
+							</div>
+							<div class="row padding1em">
+								<div class="col-md-3 col-lg-3">
+									<a href="#">HTC</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Huawei</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">LG</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Mitsubishi</a>
+								</div>
+							</div>
+							<div class="row padding1em">
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Motorla</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Nokia</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">O2</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Orange</a>
+								</div>
+							</div>	
+							<div class="row padding1em">
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Palm</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Panasonic</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Philips</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">SPV</a>
+								</div>
+							</div>	
+							<div class="row padding1em">
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Sagem</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Samsung</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Sharp</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Siemens</a>
+								</div>
+							</div>				
+							<div class="row padding1em">
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Sony</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Sony Ericsson</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Toshiba</a>
+								</div>
+								<div class="col-md-3 col-lg-3">
+									<a href="#">Vodaphone</a>
+								</div>
+							</div>				
+						</div>	
+						<!-- <table class="table table-border">
+							<tr>
+								<td><a href="#">Alcatel</td>
+								<td><a href="#">Apple</td>
+								<td><a href="#">Blackberry</td>
+							</tr>
+							<tr>
+								<td><a href="#">Alcatel</td>
+								<td><a href="#">Apple</td>
+								<td><a href="#">Blackberry</td>
+							</tr>
+						</table>	 -->
+							
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
+
+
