--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   	  <meta http-equiv="X-UA-Compatible" content="chrome=1">
   	  <meta name="description" content="Trusted service by millions, Unlock is the leading provider of the unlocking service any mobile device from anywhere in the world. " />
   	  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="author" content="locksmith of any device">
 	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	  <%= csrf_meta_tags %>
@@ -14,25 +15,47 @@
 <body>
 	<div class="row">
 	<header>
-		<nav class="navbar navbar-fixed-top navbar-default navbar-white" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<a href="#"><img id="logo" src="/assets/icon/unlock_violet_icon3.jpeg"/></a>
+		 <!-- Navigation -->
+	    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	        <div class="container-fluid">
+	            <!-- Brand and toggle get grouped for better mobile display -->
+	            <div class="navbar-header">
+	            	<a href="#"><img id="logo" src="/assets/icon/unlock_violet_icon3.jpeg"/></a>
 					<span id="title">Unlock</span>
-				</div>
- 				<ul class="nav navbar-nav navbar-right">
-		        <li><a href="#">My Account</a></li>
-		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">English <span class="caret"></span></a>
-		          <ul class="dropdown-menu" role="menu">
-		            <li><a href="#">French</a></li>
-		            <li><a href="#">Russion</a></li>
-		            <li><a href="#">Spainsh</a></li>
-		          </ul>
-		        </li>
-		      </ul>					
-	      </div>
-		</nav>
+	                <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	                    <span class="sr-only">Toggle navigation</span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                </button>
+	                <a class="navbar-brand" href="#">Start Bootstrap</a> -->
+	            </div>
+	            <!-- Collect the nav links, forms, and other content for toggling -->
+	            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	                <ul class="nav navbar-nav navbar-right">
+	                    <li>
+	                        <a href="#">My account</a>
+	                    </li>
+	                    <li>
+	                        <a href="#">Products</a>
+	                    </li>
+	                    <li>
+	                        <a href="#">Contact</a>
+	                    </li>
+	                    <li class="dropdown">
+				          <a href="#" class="dropdown-toggle" data-toggle="dropdown">English <span class="caret"></span></a>
+				          <ul class="dropdown-menu" role="menu">
+				            <li><a href="#">French</a></li>
+				            <li><a href="#">Russion</a></li>
+				            <li><a href="#">Spainsh</a></li>
+				          </ul>
+		        		</li>
+	                </ul>
+	            </div>
+	            <!-- /.navbar-collapse -->
+	        </div>
+	        <!-- /.container -->
+	    </nav>
 	</header>
 	</div>
 	<div class="container-fluid">
