--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
                 <h3>Unlock</h3>
                 <p>iPhone 4,4S,5,5C,5S,6,6+</p>
                 <p>
-                    <a href="/products/1" class="btn btn-primary">Buy Now!</a> <a href="/products/1" class="btn btn-default">More Info</a>
+                    <a href="<%=products_show_path%>/1" class="btn btn-primary">Buy Now!</a> <a href="/products/1" class="btn btn-default">More Info</a>
                 </p>
             </div>
         </div>
@@ -86,13 +86,4 @@
 	</div>
 </div>
 <hr>
-
-<!-- Footer -->
-<footer>
-    <div class="row ">
-        <div class="col-lg-12 text-center">
-            <p>Copyright &copy; Unlock  2014</p>
-        </div>
-    </div>
-</footer>
 
