--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row padding7em">
 	<div class="container">
-		<h2>Add Products </h2><br /><br />
+		<h2>List of products </h2><br /><br />
 		<%= form_tag({:controller => 'products',:action => "index"},:method=>:post, remote: true) do %>
 		<table class="table table-striped table-hover">
 			<thead>
