--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,5 +61,15 @@
 	<div class="container-fluid">
 	<%= yield %>
 	</div>
+	<!-- Footer -->
+	<footer>
+	    <div class="row ">
+	        <div class="col-lg-12 text-center">
+	            <p>Copyright &copy; Unlock  2014</p>
+	        </div>
+	    </div>
+	</footer>
+	
+
 </body>
 </html>
