Updated from Suresh_new

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,7 +39,7 @@
                 <h3>Unlock</h3>
                 <p>4,4S,5,5C,5S,6,6+</p>
                 <p>
-                    <a href="/products/2" class="btn btn-primary">Buy Now!</a> <a href="/products/2" class="btn btn-default">More Info</a>
+                    <a href="<%=products_show_path%>/2" class="btn btn-primary">Buy Now!</a> <a href="/products/2" class="btn btn-default">More Info</a>
                 </p>
             </div>
         </div>
@@ -52,7 +52,7 @@
                 <h3>Unlock</h3>
                 <p>4,4S,5,5C,5S,6,6+</p>
                 <p>
-                    <a href="/products/3" class="btn btn-primary">Buy Now!</a> <a href="/products/3" class="btn btn-default">More Info</a>
+                    <a href="<%=products_show_path%>/2" class="btn btn-primary">Buy Now!</a> <a href="/products/3" class="btn btn-default">More Info</a>
                 </p>
             </div>
         </div>
@@ -65,7 +65,7 @@
                 <h3>Unlock</h3>
                 <p>4,4S,5,5C,5S,6,6+</p>
                 <p>
-                    <a href="/products/4" class="btn btn-primary">Buy Now!</a> <a href="/products/4" class="btn btn-default">More Info</a>
+                    <a href="<%=products_show_path%>/4" class="btn btn-primary">Buy Now!</a> <a href="/products/4" class="btn btn-default">More Info</a>
                 </p>
             </div>
         </div>
