--- a/app/views/customers/showcart.html.erb
+++ b/app/views/customers/showcart.html.erb
@@ -1,67 +1,53 @@
+<%= form_tag({:controller => 'products',:action => "create"},:method=>:post) do %>
 <div class="row padding7em">
 	<div class="container">
-		<h2>Add Service </h2><br /><br />
-		<h3>Product: iPhone 3G/4S/5C</h3>
+		<h2>Your Order</h2><br /><br />
+		<div class="row">
+			<div class="col-md-offset-10 col-lg-offset-10 col-md-2 col-lg-2">
+				Invoice To:
+			</div>
+			<div class="col-md-offset-10 col-lg-offset-10 col-md-2 col-lg-2">
+				<%=@customer.firstname + ' ' + @customer.lastname%>
+			</div>
+		</div>
 		<table class="table table-striped table-hover">
 			<thead>
 				<col width="20%">
 				<tr>
-					<td>Provider</td>
-					<td>Method</td>
-					<td>Rating</td>
+					<td>Item Description</td>
+					<td>Quantity</td>
 					<td>Price</td>
-					<td>Time To Unlock</td>
-					<td></td>
+					<td>Delivery Time</td>
+					<td>Amount</td>
 				</tr>
 			</thead>
 			<tbody>
+				<% @cartlineitems.each do |p| %>
 				<tr>
-					<td><div class="btn-lg btn-primary">Rogers</div></td>
-					<td>Network</td>
-					<td><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></span></td>
-					<td>US$ 25.00</td>
-					<td>24 hours</td>
 					<td>
-						<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-						<input type="hidden" name="cmd" value="_s-xclick">
-						<input type="hidden" name="hosted_button_id" value="QRNHFSXZM8LH4">
-						<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-						<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-						</form>
+						 <div class="thumbnail">
+	            			<img src="<%=p.product.imageurl%>" alt="">
+	            			<div class="caption">
+	            				<h3><%= p.product.description%></h3>
+	            			</div>
+	            		</div>
+	                
+	                <h3>Delivery in <%= @product.deliveryterms %> *</h3>						
 					</td>
-
+					<td><%= p.quantity %></td>
+					<td><%= p.product.currency.code %> <%= number_to_currency(p.price,unit: ' ')%> <%=p.price%></td>
+					<td><%= p.product.deliveryterms%></td>
+					<td><%= p.amount%></td>
 				</tr>
+				<% end %>
+			</tbody>
+			<tfoot>
 				<tr>
-					<td><div class="btn-lg btn-info">Bell</div></td>
-					<td>Network</td>
-					<td><span>☆</span><span>☆</span><span>☆</span><span>☆</span></td>
-					<td>US$ 25.00</td>
-					<td>24 hours</td>
-					<td>
-						<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-						<input type="hidden" name="cmd" value="_s-xclick">
-						<input type="hidden" name="hosted_button_id" value="QRNHFSXZM8LH4">
-						<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-						<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-						</form>
-					</td>
+					<td colspan="4">Total:</td>
+					<td><=@totalamount></td>
 				</tr>
-				<tr>
-					<td><div class="btn-lg btn-success">Telus</div></td>
-					<td>Network</td>
-					<td><span>☆</span><span>☆</span><span>☆</span></td>
-					<td>US$ 25.00</td>
-					<td>24 hours</td>
-					<td>
-						<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-						<input type="hidden" name="cmd" value="_s-xclick">
-						<input type="hidden" name="hosted_button_id" value="QRNHFSXZM8LH4">
-						<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-						<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-						</form>
-					</td>
-				</tr>				
-			</tbody>	
+			</tfoot>	
 		</table>	
 	</div>
 </div>
+<% end %>
