--- a/app/views/customers/showcart.html.erb
+++ b/app/views/customers/showcart.html.erb
@@ -1,13 +1,13 @@
-<%= form_tag({:controller => 'products',:action => "create"},:method=>:post) do %>
+<%= form_tag({:controller => 'products',:action => "checkout"},:method=>:post) do %>
 <div class="row padding7em">
 	<div class="container">
 		<h2>Your Order</h2><br /><br />
 		<div class="row">
 			<div class="col-md-offset-10 col-lg-offset-10 col-md-2 col-lg-2">
-				Invoice To:
+				<h3>Invoice To:</h3>
 			</div>
 			<div class="col-md-offset-10 col-lg-offset-10 col-md-2 col-lg-2">
-				<%=@customer.firstname + ' ' + @customer.lastname%>
+				<h4><%=@customer.FirstName + ' ' + @customer.LastName%></h4>
 			</div>
 		</div>
 		<table class="table table-striped table-hover">
@@ -22,20 +22,18 @@
 				</tr>
 			</thead>
 			<tbody>
-				<% @cartlineitems.each do |p| %>
+				<% @cart.cartlineitems.each do |p| %>
 				<tr>
 					<td>
 						 <div class="thumbnail">
-	            			<img src="<%=p.product.imageurl%>" alt="">
+	            			<img src="<%= p.product.imageurl%>" alt="">
 	            			<div class="caption">
-	            				<h3><%= p.product.description%></h3>
+	            				<h5><%= p.product.description%></h5>
 	            			</div>
 	            		</div>
-	                
-	                <h3>Delivery in <%= @product.deliveryterms %> *</h3>						
 					</td>
 					<td><%= p.quantity %></td>
-					<td><%= p.product.currency.code %> <%= number_to_currency(p.price,unit: ' ')%> <%=p.price%></td>
+					<td><%= p.product.currency.code %> <%= number_to_currency(p.price,unit: ' ')%></td>
 					<td><%= p.product.deliveryterms%></td>
 					<td><%= p.amount%></td>
 				</tr>
@@ -44,10 +42,14 @@
 			<tfoot>
 				<tr>
 					<td colspan="4">Total:</td>
-					<td><=@totalamount></td>
+					<td><%=@totalamount%></td>
 				</tr>
 			</tfoot>	
 		</table>	
 	</div>
+</div>
+<div class="row text-center">
+	<button type="submit" name="cmdPayNow" class="btn btn-primary input-lg">
+	<img src="https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif" align="left" style="margin-right:7px;"></button>
 </div>
 <% end %>
