Signup Signon Single product done

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -42,7 +42,7 @@
 			<tfoot>
 				<tr>
 					<td colspan="4">Total:</td>
-					<td><%=@totalamount%></td>
+					<td><%=session[:total]%></td>
 				</tr>
 			</tfoot>	
 		</table>	
