--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -23,12 +23,13 @@
 					<td><%= p.currency.code %> <%= number_to_currency(p.price,unit: ' ') %></td>
 					<td><%= p.deliveryterms %></td>
 					<td>
-						<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+						<%= button_to 'Add  Cart', action: "addCart" %>
+						 <!-- <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 						<input type="hidden" name="cmd" value="_s-xclick">
 						<input type="hidden" name="hosted_button_id" value="QRNHFSXZM8LH4">
 						<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 						<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-						</form>
+						</form> --> 
 					</td>
 				</tr>
 				<% end %>
