--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,15 @@
 				            <li><a href="#">Spainsh</a></li>
 				          </ul>
 		        		</li>
+		        		<% if session[:customer_name].nil? == false %>
+		        		<li class="dropdown">
+		        		  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=session[:customer_name]%> <span class="caret"></span></a>
+				          <ul class="dropdown-menu" role="menu">
+				            <li><a href="<%=customers_logout_url%>">Logout</a></li>
+				          </ul>
+				        </li>
+				        <% end %>
+		        			
 	                </ul>
 	            </div>
 	            <!-- /.navbar-collapse -->
